2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use install-data-local to install startfile.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-21	Joel Sherrill <joel@OARcorp.com>

	* bsp_specs: Added support for -nostdlibs.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* console/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* irq/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* start/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* startup/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* wrapup/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Eliminate PGM.
	Add bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o.

2002-07-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds.

2002-07-17	Jay Monkman <jtm@smoothsmoothie.com>

	* irq/bsp_irq_asm.S: Disable code to touch PIC.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2001-05-09	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: In support of gcc 3.1, added one of more
	of the sections .jcr, .rodata*, .data.*, .gnu.linkonce.s2.*,
	.gnu.linkonce.sb2.*, and .gnu.linkonce.s.*.  Spacing corrections
	and direction of segments to memory regions may also have been
	addressed.  This was a sweep across all BSPs.
 
2002-03-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Update, remove code rott.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.